# geotiff-to-pmtiles

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
bench-data/: a.tfw  b.tfw  c.tfw
docs/: ALGORITHMS.md  RESAMPLING_AGAINST_TARGET_TILES.md
src/: cli.rs  convert.rs  cover_tile.rs  header.rs  main.rs  resample.rs
src/convert/: cache.rs  mod.rs  render.rs  source.rs
src/resample/: georef.rs  inputs.rs  mod.rs  nodata.rs  raster.rs  render.rs  types.rs
tests/fixtures/: gdal-nodata-0.tif  gdal-nodata-255.tif
tiff-compio/: Cargo.toml  README.md
tiff-compio/examples/: pixel.rs  tiffinfo.rs
tiff-compio/src/: byte_order.rs  chunk.rs  decompress.rs  error.rs  header.rs  ifd.rs  lib.rs  normalize.rs  tag.rs
tiff-compio/tests/: real_tiff_files.rs
tiff-compio/tests/images/: gdal-no-nodata.tif  gdal-nodata-0.tif  gdal-nodata-255.tif
tools/generate-bench-data/: Cargo.toml
tools/generate-bench-data/src/: main.rs
