[package]
name = "geotiff-to-pmtiles"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
tiff = "0.11"
pmtiles = { version = "0.20.0", default-features = false, features = ["write"] }
proj-lite = { git = "https://github.com/yutannihilation/proj-rs-lite.git", version = "0.1.0" }
image = { version = "0.25.9", default-features = false, features = ["avif", "tiff"] }
ravif = "0.13.0"
imgref = { version = "1.12.0", default-features = false }
rayon = "1.11.0"
glob = "0.3.2"
