[workspace]
members = [".", "tiff-compio"]

[package]
name = "geotiff-to-pmtiles"
version = "0.0.11-rc.1"
edition = "2024"
repository = "https://github.com/yutannihilation/geotiff-to-pmtiles"
autobins = false

[[bin]]
name = "geotiff-to-pmtiles"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
tiff-compio = { path = "tiff-compio" }
compio = { version = "0.18", features = ["io", "runtime", "macros", "fs"] }
pmtiles = { version = "0.20.0", default-features = false, features = ["write"] }
proj-lite = { git = "https://github.com/yutannihilation/proj-rs-lite.git", rev = "15455f3813da307683e8619f88f09e9e5943fd1c", version = "0.1.0" }
image = { version = "0.25.9", default-features = false, features = ["avif", "tiff"] }
ravif = "0.13.0"
imgref = { version = "1.12.0", default-features = false }
rayon = "1.11.0"
glob = "0.3.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
